refactor(posts): Update code block formatting for clarity
- Changed input and output sections to use title attributes for better context.
- Improved readability by removing unnecessary markup.

--- a/content/posts/argorithm/prefix-sum.mdx
+++ b/content/posts/argorithm/prefix-sum.mdx
@@ -116,10 +116,7 @@ function prefixSums(arr) {
 > - 1 ≤ M ≤ 100,000
 > - 1 ≤ i ≤ j ≤ N
 >
-> :::boj-input 예제 입력
->
-> ```text
->
+> ```text title="예제 입력"
 > 5 3
 > 5 4 3 2 1
 > 1 3
@@ -127,18 +124,11 @@ function prefixSums(arr) {
 > 5 5
 > ```
 >
-> :::
->
-> :::boj-output 예제 출력
->
-> ```text
->
+> ```text title="예제 출력"
 > 12
 > 9
 > 1
 > ```
->
-> :::
 
 ---
 
