--- a/content/posts/codegolf/php.mdx
+++ b/content/posts/codegolf/php.mdx
@@ -63,7 +63,7 @@ Hello World!
 > Hello World!
 > ```
 
-```C++
+```c++
 #include <iostream>
 using namespace std;
 
@@ -73,6 +73,6 @@ int main() {
 }
 ```
 
-```JavaScript
-console.log("Hello World!");
+```javascript
+console.log('Hello World!');
 ```
