--- a/content/posts/baekjoon/1001.mdx
+++ b/content/posts/baekjoon/1001.mdx
@@ -17,13 +17,13 @@ tags: [백준, 알고리즘]
 
 첫째 줄에 A-B를 출력한다.
 
-:::boj-input 예제 입력
+```text title="예제 입력"
 3 2
-:::
+```
 
-:::boj-output 예제 출력
+```text title="예제 출력"
 1
-:::
+```
 
 ## 알고리즘 분류
 
@@ -37,17 +37,11 @@ tags: [백준, 알고리즘]
 
 한줄로 입력된 두 숫자를 구하고 결과를 출력한다
 
-:::boj-code PHP
-
 ```php
 <?
 fscanf(STDIN, "%d %d", $a, $b);
 echo $a - $b;
 ```
-
-:::
-
-:::boj-code CPP
 
 ```cpp
 #include <iostream>
@@ -61,27 +55,18 @@ int main(){
 }
 ```
 
-:::
-
-:::boj-code JavaScript
-
-```JavaScript
+```javascript
 const fs = require('fs');
 const inputData = fs.readFileSync(0, 'utf8').toString().split(' ');
-const a = parseInt(inputData[0]), b = parseInt(inputData[1]);
+const a = parseInt(inputData[0]),
+  b = parseInt(inputData[1]);
 console.log(a - b);
 ```
-
-:::
 
 ## 숏코딩 풀이
 
 주어진 숫자가 한자리수인 점을 이용 해 입력을 문자열로 처리하면 더 짧게 처리가 가능하다.
 
-:::boj-code PHP
-
 ```php
 <?=($_=fgets(STDIN))[0]-$_[2];
 ```
-
-:::
