--- a/content/posts/baekjoon/1008.mdx
+++ b/content/posts/baekjoon/1008.mdx
@@ -17,21 +17,21 @@ tags: [백준, 알고리즘]
 
 첫째 줄에 A/B를 출력한다. 실제 정답과 출력값의 절대오차 또는 상대오차가 10-9 이하이면 정답이다.
 
-:::boj-input 예제 입력 1
+```text title="예제 입력 1"
 1 3
-:::
+```
 
-:::boj-output 예제 출력 1
+```text title="예제 출력 1"
 0.33333333333333333333333333333333
-:::
+```
 
-:::boj-input 예제 입력 2
+```text title="예제 입력 2"
 4 5
-:::
+```
 
-:::boj-output 예제 출력 2
+```text title="예제 출력 2"
 0.8
-:::
+```
 
 ## 알고리즘 분류
 
@@ -45,19 +45,13 @@ tags: [백준, 알고리즘]
 
 한줄로 입력된 두 숫자를 구하고 결과를 출력한다
 
-:::boj-code PHP
-
 ```php
 <?
 fscanf(STDIN, "%d %d", $a, $b);
 echo $a / $b;
 ```
 
-:::
-
 출력 소수 자릿수가 9개 이상 나와야하기 때문에 `iomanip`의 `setprecision`을 사용해야한다
-
-:::boj-code CPP
 
 ```cpp
 #include <iostream>
@@ -73,13 +67,9 @@ int main(){
 }
 ```
 
-:::
-
 > 사실 그냥 `scanf`와 `printf`를 사용하는 방법이 더 간단하다
 >
-> :::boj-code CPP
-
-````cpp
+> ````cpp
 > #include <ios>
 >
 > int main(){
@@ -90,26 +80,20 @@ int main(){
 >   return 0;
 > }
 > ```
-:::
+> ````
 
-:::boj-code JavaScript
-```JavaScript
+```javascript
 const fs = require('fs');
 const inputData = fs.readFileSync(0, 'utf8').toString().split(' ');
-const a = parseInt(inputData[0]), b = parseInt(inputData[1]);
+const a = parseInt(inputData[0]),
+  b = parseInt(inputData[1]);
 console.log(a / b);
-````
-
-:::
+```
 
 ## 숏코딩 풀이
 
 주어진 숫자가 한자리수인 점을 이용 해 입력을 문자열로 처리하면 더 짧게 처리가 가능하다.
 
-:::boj-code PHP
-
 ```php
 <?=($_=fgets(STDIN))[0]/$_[2];
 ```
-
-:::
