--- a/content/posts/baekjoon/10869.mdx
+++ b/content/posts/baekjoon/10869.mdx
@@ -17,17 +17,17 @@ tags: [백준, 알고리즘]
 
 첫째 줄에 A+B, 둘째 줄에 A-B, 셋째 줄에 A\*B, 넷째 줄에 A/B, 다섯째 줄에 A%B를 출력한다.
 
-:::boj-input 예제 입력
+```text title="예제 입력"
 7 3
-:::
+```
 
-:::boj-input 예제 출력
+```text title="예제 출력"
 10
 4
 21
 2
 1
-:::
+```
 
 ## 알고리즘 분류
 
@@ -41,8 +41,6 @@ tags: [백준, 알고리즘]
 
 한줄로 입력된 두 숫자를 구하고 결과를 출력한다
 
-:::boj-code PHP
-
 ```php
 <?
 fscanf(STDIN, "%d%d", $a, $b);
@@ -52,10 +50,6 @@ echo $a * $b . PHP_EOL;
 echo intdiv($a, $b) . PHP_EOL;
 echo $a % $b;
 ```
-
-:::
-
-:::boj-code CPP
 
 ```cpp
 #include <ios>
@@ -69,13 +63,9 @@ int main(){
 }
 ```
 
-:::
-
 ## 숏코딩 풀이
 
 더 코드를 줄일 방법이 생각나지 앉아서 그냥 공백만 제거했다
-
-:::boj-code PHP
 
 ```php
 <?fscanf(STDIN,"%d%d",$a,$b);printf("%d
@@ -84,5 +74,3 @@ int main(){
 %d
 %d",$a+$b,$a-$b,$a*$b,$a/$b,$a%$b);
 ```
-
-:::
