--- a/content/posts/baekjoon/2557.mdx
+++ b/content/posts/baekjoon/2557.mdx
@@ -17,12 +17,13 @@ Hello World!를 출력하시오.
 
 Hello World!를 출력하시오.
 
-:::boj-input 예제 입력
-:::
+```text title="예제 입력"
 
-:::boj-output 예제 출력
+```
+
+```text title="예제 출력"
 Hello World!
-:::
+```
 
 ## 알고리즘 분류
 
@@ -34,15 +35,9 @@ Hello World!
 
 단순히 Hello World! 를 출력하면 된다
 
-:::boj-code PHP
-
 ```php
 <? echo "Hello World!";
 ```
-
-:::
-
-:::boj-code CPP
 
 ```cpp
 #include <iostream>
@@ -54,26 +49,16 @@ int main() {
 }
 ```
 
-:::
-
-:::boj-code JavaScript
-
-```JavaScript
-console.log("Hello World!");
+```javascript
+console.log('Hello World!');
 ```
-
-:::
 
 ## 숏코딩 풀이
 
 php는 `<?php ?>` 태그 밖의 문자는 그대로 출력하기 때문에 아래 코드도 정답으로 처리된다
-
-:::boj-code PHP
 
 ```php
 Hello World!
 ## 숏코딩 풀이
 php는 `<?php ?>` 태그 밖의 문자는 그대로 출력하기 때문에 아래 코드도 정답으로 처리된다
 ```
-
-:::
