style(posts): Remove emoji from post titles for consistency

--- a/content/posts/blog/sitemap-issue.mdx
+++ b/content/posts/blog/sitemap-issue.mdx
@@ -1,5 +1,5 @@
 ---
-title: '📝 Google Search Console의 사이트맵을 가져올 수 없음 문제를 해결한 과정'
+title: 'Google Search Console의 사이트맵을 가져올 수 없음 문제를 해결한 과정'
 summary: 'Google Search Console에서 사이트맵을 가져올 수 없음 문제를 해결한 과정을 기록합니다.'
 date: 2024-04-02 12:42:00
 tags: [블로그]
@@ -51,7 +51,5 @@ _허무할 정도로 간단하게 사이트맵 등록 성공_
 
 # 결론
 
-사이트맵은 등록되었지만, 실제로 페이지가 색인되진 않아서 조금 더 기다려봐야겠지만,
-이제 블로그가 검색엔진에 등록되어 누군가에게 도움이 되길 바라는 마음으로 글을 마칩니다.
-
-추후에 색인까지 완료되면 이 글을 수정해서 결과를 자랑해보도록 하겠습니다. ㅎㅎ
+현재 실제로 사이트맵이 등록되고 페이지가 제대로 색인되는 중입니다.
+글이 매우 짧고 간단하지만 누군가에게 도움이 되길 바라는 마음으로 글을 납깁니다.
