--- a/content/posts/php/php-history.mdx
+++ b/content/posts/php/php-history.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🐘 PHP : 간단하게 알아보는 PHP의 역사'
+title: '간단하게 알아보는 PHP의 역사'
 summary: 'PHP의 역사를 버전별로 간단히 정리해보았습니다.'
 date: 2023-10-24 12:43:00
 tags: [php]
