--- a/content/posts/php/php-talkative-01-intro.mdx
+++ b/content/posts/php/php-talkative-01-intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🐘 PHP 수다떨기 - PHP 자체에 대한 이야기'
+title: 'PHP 자체에 대한 수다떨기'
 summary: 'PHP에 대해 수다를 떨기 위해 먼저 PHP에 대해 이야기해보는 글입니다.'
 date: 2024-04-03 10:12:00
 tags: [php]
@@ -11,7 +11,7 @@ tags: [php]
 
 # 🚩 개요
 
-제가 [🐘 PHP : 간단하게 알아보는 PHP의 역사](/posts/php/php-history)를 작성한 지 반년이 지났습니다.
+제가 [간단하게 알아보는 PHP의 역사](/posts/php/php-history)를 작성한 지 반년이 지났습니다.
 사실 PHP에 관련된 글을 작성하려는 시도를 여러번 했었는데,
 더 자세히...더 정확히...하고 욕심내다가 결국 대부분의 글이 마무리되지 못한 채 방치되었습니다.
 
@@ -186,9 +186,6 @@ PHP를 PHP 확장 프로그램으로 만들어주는 [zephir](https://github.com
 
 # 📚 마치며
 
-마무리가 좀 갑작스럽지만 생각나는 내용들을 천천히 적는 중이기 때문에
-이번 글은 여기서 마치도록 하겠습니다.
-
-PHP의 문법에 대한 수다는 다음에 이어서 해보도록 할게요.
+마무리가 좀 갑작스럽지만 생각나는 내용들을 천천히 적는 중이기 때문에 이번 글은 여기서 마치도록 하겠습니다.
 
 ![P-H-P-H-P](/assets/posts/php/p-h-p-h-p.png)
