--- a/content/posts/php/why-php-blamed.mdx
+++ b/content/posts/php/why-php-blamed.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🐘 PHP? 그거 개그용 언어 아니야?'
+title: 'PHP? 그거 개그용 언어 아니야?'
 summary: 'PHP가 왜 개발자들에게 미움을 받는 지에 대해 조심스럽게 남겨봅니다.'
 date: 2023-01-27 12:43:00
 tags: [php]
