--- a/content/posts/ps/baekjoon-10869.mdx
+++ b/content/posts/ps/baekjoon-10869.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 백준 10869 : 사칙연산 (C++, PHP, Javascript)'
+title: '백준 10869 : 사칙연산 (C++, PHP, Javascript)'
 summary: '백준 10869 : 사칙연산 문제를 C++, PHP, Javascript로 풀이한 내용입니다.'
 date: 2022-11-09 11:02:00
 tags: [백준, 알고리즘]
