--- a/content/posts/ps/programmers-120866-js.mdx
+++ b/content/posts/ps/programmers-120866-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 120866 : 안전지대 - Javascript'
+title: '프로그래머스 120866 : 안전지대 - Javascript'
 summary: '프로그래머스 120866 : 안전지대 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-03-04 22:56:00
 tags: [알고리즘, 프로그래머스]
