--- a/content/posts/ps/programmers-120876-js.mdx
+++ b/content/posts/ps/programmers-120876-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 120876 : 겹치는 선분의 길이 - Javascript'
+title: '프로그래머스 120876 : 겹치는 선분의 길이 - Javascript'
 summary: '프로그래머스 120876 : 겹치는 선분의 길이 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-03-03 23:12:00
 tags: [알고리즘, 프로그래머스]
