--- a/content/posts/ps/programmers-120956-js.mdx
+++ b/content/posts/ps/programmers-120956-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 120956 : 옹알이 - Javascript'
+title: '프로그래머스 120956 : 옹알이 - Javascript'
 summary: '프로그래머스 120956 : 옹알이  문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-02-04 12:13:00
 tags: [알고리즘, 프로그래머스]
