--- a/content/posts/ps/programmers-12985-js.mdx
+++ b/content/posts/ps/programmers-12985-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 12985 : 예상 대진표 - Javascript'
+title: '프로그래머스 12985 : 예상 대진표 - Javascript'
 summary: '프로그래머스 12985 : 예상 대진표 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-02-25 11:35:00
 tags: [알고리즘, 프로그래머스]
