--- a/content/posts/ps/programmers-152995-js.mdx
+++ b/content/posts/ps/programmers-152995-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 152995 : 인사고과 - Javascript'
+title: '프로그래머스 152995 : 인사고과 - Javascript'
 summary: '프로그래머스 152995 : 인사고과 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-02-02 16:29:00
 tags: [알고리즘, 프로그래머스]
