--- a/content/posts/ps/programmers-1845-js.mdx
+++ b/content/posts/ps/programmers-1845-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 1845 : 폰켓몬 - Javascript'
+title: '프로그래머스 1845 : 폰켓몬 - Javascript'
 summary: '프로그래머스 1845 : 폰켓몬 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-02-02 18:21:00
 tags: [알고리즘, 프로그래머스]
