--- a/content/posts/ps/programmers-42893-js.mdx
+++ b/content/posts/ps/programmers-42893-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 42893 : 매칭 점수 - Javascript'
+title: '프로그래머스 42893 : 매칭 점수 - Javascript'
 summary: '프로그래머스 42893 : 매칭 점수  문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-03-01 23:48:00
 tags: [알고리즘, 프로그래머스]
