--- a/content/posts/ps/samsung-codetest-marbles-cpp.mdx
+++ b/content/posts/ps/samsung-codetest-marbles-cpp.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 CodeTest : 구슬치기 (C++)'
+title: '삼성 코딩테스트 : 구슬치기 (C++)'
 summary: '삼성 코딩테스트 : 구슬치기 문제를 C++로 풀이한 내용입니다.'
 date: 2022-11-08 15:34:00
 tags: [알고리즘, cpp, codetest]
