--- a/content/posts/ps/baekjoon-10998.mdx
+++ b/content/posts/ps/baekjoon-10998.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 백준 10998 : A×B (C++, PHP, Javascript)'
+title: '백준 10998 : A×B (C++, PHP, Javascript)'
 summary: '백준 10998 : A×B 문제를 C++, PHP, Javascript로 풀이한 내용입니다.'
 date: 2022-11-04 13:18:00
 tags: [백준, 알고리즘]
