--- a/content/posts/ps/baekjoon-2557.mdx
+++ b/content/posts/ps/baekjoon-2557.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 백준 2557 : Hello World (C++, PHP, Javascript)'
+title: '백준 2557 : Hello World (C++, PHP, Javascript)'
 summary: '백준 2557 : Hello World 문제를 C++, PHP, Javascript로 풀이한 내용입니다.'
 date: 2022-11-04 12:55:00
 tags: [백준, 알고리즘]
