--- a/content/posts/ps/programmers-120875-js.mdx
+++ b/content/posts/ps/programmers-120875-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 120875 : 평행 - Javascript'
+title: '프로그래머스 120875 : 평행 - Javascript'
 summary: '프로그래머스 120875 : 평행 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-03-03 21:12:00
 tags: [알고리즘, 프로그래머스]
