--- a/content/posts/ps/programmers-42576-js.mdx
+++ b/content/posts/ps/programmers-42576-js.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 프로그래머스 42576 : 완주하지 못한 선수 - Javascript'
+title: '프로그래머스 42576 : 완주하지 못한 선수 - Javascript'
 summary: '프로그래머스 42576 : 완주하지 못한 선수 문제를 Javascript로 풀이한 내용입니다.'
 date: 2023-02-02 16:29:00
 tags: [알고리즘, 프로그래머스]
