refactor(posts): Improve formatting and structure in blog posts
- Updated code blocks to include titles for better clarity.
- Enhanced readability by restructuring text and removing unnecessary elements.

--- a/content/posts/blog/sitemap-issue.mdx
+++ b/content/posts/blog/sitemap-issue.mdx
@@ -20,20 +20,16 @@ tags: [블로그]
 몇 개월의 시간 동안 저와 비슷한 문제를 겪는 사람들의 글을 보며 수많은 해결 방법을 시도해봤지만 결국 실패하고,
 글도 쓰지 못한 채 이 문제를 해결하기 위해 시간을 쏟아가 점점 블로그 운영에 대한 의욕을 잃어 한동안 블로그를 방치하게 되었습니다.
 
-:::info 제가 시도해본 방법들
-
-> 혹시나 누군가에겐 해결책이 될 수 있으니 제가 시도해본 방법들은 남겨놓을게요.
-
-- `sitemap.xml/?test` 처럼 `?`나 `/`를 붙여보세요
-- `sitemap.xml` 파일을 `sitemap`로 변경해보세요.
-- `sitemap.xml` 대신 `rss.xml`이나 `atom.xml` 파일을 만들어보세요.
-- `robots.txt` 파일에 `Sitemap: https://{당신의 도메인}/sitemap.xml` 를 추가해보세요.
-- 사이트 속성 말고 도메인 속성으로 등록해서 시도해보세요
-- 이미 도메인 속성이라면 `https://{당신의 도메인}/sitemap.xml` 처럼 전체 경로를 입력해보세요.
-- `{당신의 깃헙 아이디}.github.io`가 아닌 이름으로 레포를 만들고 도메인을 설정해보세요.
-- GihubPages가 아니라 Vercel 등 다른 플랫폼으로 이전해서 시도해보세요.
-
-:::
+> 혹시나 누군가에겐 해결책이 될 수 있으니 제가 시도해본 방법들을 남겨놓겠습니다.
+>
+> - `sitemap.xml/?test` 처럼 URL의 뒤에 `?`나 `/`를 붙여서 새로 시도해보세요.
+> - `sitemap.xml` 파일을 `sitemap`으로 변경해보세요.
+> - `sitemap.xml` 대신 `rss.xml`이나 `atom.xml` 파일을 만들어보세요.
+> - `robots.txt` 파일에 `Sitemap: https://{도메인}/sitemap.xml` 를 추가해보세요.
+> - 사이트 속성 말고 도메인 속성으로 등록해서 시도해보세요.
+> - 이미 도메인 속성이라면 `https://{도메인}/sitemap.xml` 처럼 전체 경로를 입력해보세요.
+> - `{당신의 깃헙 아이디}.github.io`가 아닌 이름으로 레포를 만들고 도메인을 설정해보세요.
+> - GihubPages가 아니라 Vercel 등 다른 플랫폼으로 이전해서 시도해보세요.
 
 ---
 
