--- a/content/posts/ps/programmers-131702-js.mdx
+++ b/content/posts/ps/programmers-131702-js.mdx
@@ -49,9 +49,7 @@ tags: [알고리즘, 프로그래머스]
 그래서 먼저 이 방식으로 풀어보니 $n < 4$일 때 시간 초과가, $n>=4$일 때는 아예 `signal: aborted (core dumped)` 오류가 발생해 실패했습니다.
 검색해보니 해당 오류의 경우 메모리 범위를 벗어나거나, 자바스크립트 배열의 최대 크기인 $2^{32}-1$을 초과할 경우 발생한다는 답변이 있었습니다.
 
-:::danger 모든 경우의 수를 만들기 위해 작성된 문제의 함수
-
-```javascript
+```javascript title="JAVASCRIPT : 모든 경우의 수를 만들기 위해 작성된 문제의 함수"
 const createAllCases = (count, arr = [], acc = []) => {
   if (arr.length == count * count) {
     const result = [];
@@ -69,8 +67,6 @@ const createAllCases = (count, arr = [], acc = []) => {
   return acc;
 };
 ```
-
-:::
 
 이런 문제가 발생하는 이유가 궁금해 경우의 수를 계산해보니 $n*n$ 행렬에 0~3를 대입하는 경우의 수는 무려 $4^{n*n}$으로, "와 보기만해도 n이 조금만 커져도 난리 나겠네..." 싶었습니다.
 직접 계산을 해봐도 입출력 예와 같이 $n=4$의 작은 행렬에서도 $4^{16}$개의 경우의 수가 나오고, 최대 크기인 $n=8$의 경우 $4^{64}$로 무려 39자리의 읽기도 힘든 긴 수가 나왔습니다. 문제의 입력 범위와 풀이의 실행 시간을 미리 생각해보지 않은 제 실수였습니다...
@@ -104,9 +100,7 @@ const createAllCases = (count, arr = [], acc = []) => {
 - $n = 4\ \Rightarrow\ 4^{4} *\ 4^2\ =\ 4,096$
 - $n = 8\ \Rightarrow\ 4^{8} *\ 8^2\ =\ 4,194,304$ 😆
 
-:::info 개선된 코드 전문
-
-```javascript
+```javascript title="JAVASCRIPT : 개선된 코드"
 //2차원 배열의 깊은 복사를 수행하는 함수
 const deepcopy = arr => arr.map(v => v.slice());
 
@@ -183,5 +177,3 @@ function solution(originClockHands) {
   return answer;
 }
 ```
-
-:::
