--- a/content/posts/php/php-talkative-01-intro.mdx
+++ b/content/posts/php/php-talkative-01-intro.mdx
@@ -100,28 +100,23 @@ PHP 파일은 아래와 같이 `<?php ... ?>` 태그 안에 PHP 코드가 삽입
 설정을 통해 `<?`(SGML) 나 `<%`(ASP)로 시작하는 태그를 사용할 수도 있습니다.
 하지만 왠만한 경우엔 이식성 문제로 인해 `<?php`를 사용하는 것이 좋습니다.
 
-:::info HTML 내에 삽입된 예시
+```php title="PHP 코드"
+<html>
+    <body>
+        <?php
+            echo "Hello World!";
+        ?>
+    </body>
+</html>
+```
 
-- PHP 코드 내용
-  ```php
-  <html>
-      <body>
-          <?php
-              echo "Hello World!";
-          ?>
-      </body>
-  </html>
-  ```
-- 출력 결과
-  ```text
-  <html>
-      <body>
-          Hello World!
-      </body>
-  </html>
-  ```
-
-:::
+```text title="출력 결과"
+<html>
+    <body>
+        Hello World!
+    </body>
+</html>
+```
 
 하지만, 스크립트 파일로서 사용될 때는 오히려 `?>` 태그를 사용하지 않는 것이 권장됩니다.
 이유는 `?>`로 닫힌 이후에 공백이나 줄바꿈이 있으면 의도치 않은 출력이 생길 수 있기 때문입니다.
@@ -130,7 +125,7 @@ PHP 파일은 아래와 같이 `<?php ... ?>` 태그 안에 PHP 코드가 삽입
 또한 PHP의 모든 명령문은 C언어처럼 세미콜론(`;`)으로 끝나야 합니다.
 하지만 `?>`태그로 닫히면 세미콜론을 생략해도 됩니다.
 
-```php
+```php title="축약된 PHP 코드"
 <?= "Hello World!" ?>
 ```
 
