--- a/content/posts/php/why-php-blamed.mdx
+++ b/content/posts/php/why-php-blamed.mdx
@@ -19,35 +19,29 @@ draft: true
 이 때문에 PHP에 대해 잘 모르지만, 그저 남들따라 PHP를 욕하고 피하는 사람들까지 있을 정도입니다.
 
 이 포스트는 이렇게 PHP에 대해 알지 못해 관련 밈을 즐기지 못하던 개발자 분들이 PHP가 욕먹는 이유를 더 자세히 알고,
-후에 PHP 밈을 만난다면 *"아 이거 그거지ㅋㅋ"*하고 아는 자만의 웃음을 지으시길 바라며 작성했습니다.
+후에 PHP 밈을 만난다면 _"아 이거 그거지ㅋㅋ"_ 하고 아는 자만의 웃음을 지으시길 바라며 작성했습니다.
 
-```php
+```php title="이 글의 목적.php"
 $postPurpose = [
     "PHP에 대해 잘 모르고 욕하는 사람" => "제대로 알고나서 문제점을 콕 집어가며 잘 즐겨주세요",
-    "PHP 밈에 공감 없이 지나가던 사람" => "어떤 부분을 비판하는 밈인지 알고나면 더 재미있어요",
-    "PHP에 대해 잘 알고 사용하는 사람" => "생각보다 잘 모르던 문제점도 많을거에요 (그러길 바래요)"
+    "PHP 밈에 공감 없이 지나가던 사람" => "어떤 걸 말하는 밈인지 아시면 같이 웃으실 수 있습니다!",
+    "PHP에 대해 잘 알고 사용하는 사람" => "잘 아시니까 웃으면서 같이 즐겨주세요",
 ]
 ```
 
 ---
 
-:::danger 포스트를 읽기 전 주의사항
-먼저, 이 포스트는 PHP 언어에 대한 비판(비난?)이라는 굉장히 민감한 주제를 다루고 있습니다.
-작성된 내용에 반대되는 의견을 가지는 독자분들을 충분히 존중하고 있습니다.
-대신 아래 사항을 먼저 읽고 난 후 포스트를 즐겨주세요. 언제나 지적과 의견이 담긴 댓글은 환영입니다!
-
-- ❌ _"안써보고 그냥 무작정 욕하는거 아니냐?"_ , _"수많은 사이트가 아직도 PHP를 사용하는데...?"_
-  > 저도 2014년에 PHP로 프로그래밍을 시작하고 지금까지도 꾸준히 사용중인 PHP 개발자입니다.
-  > 이 포스트는 제 기준에서 신기하고 재미있던 문제점들을 정리해보고 싶은 마음에 시작되었습니다.
-- ❌ _"이건 단점이라기보단 이런 이런 목적을 가지고 있는건데?"_
-  > 일단 글을 작성할 때 최대한 이유나 예시를 함께 작성해 이해를 도우려고 하고 있습니다.
-  > 긍정적인 역할이나 기능이 있더라도 발생되거나 가능성 있는 문제점을 중점적으로 다루는 중이기 때문에,
-  > 만약 설명이 부족하거나 잘못된 부분이 있다면 댓글을 통해 말씀해주시면 수정하겠습니다.
-- ❌ _"그런 이상한 코드를 작성한 사람 잘못 아니야?"_
-  > 사실 제 생각에는 PHP가 욕먹는 이유의 반 이상이 그 "이상한 사용자"들입니다.
-  > 그런 사용자들이 저지른 실수와 문제가 꽤 재미있게 다가왔기 때문에 이 포스트에 담아두었습니다.
-
-:::
+> 이 포스트는 PHP 언어에 대한 비난으로 보일 수 있는 굉장히 민감한 주제를 다루고 있습니다.
+>
+> - ❌ _"안써보고 그냥 무작정 욕하는거 아니냐?"_ , _"수많은 사이트가 아직도 PHP를 사용하는데...?"_
+>   - 저도 2014년에 PHP로 프로그래밍을 시작하고 지금까지도 꾸준히 사용중입니다.
+>   - 이 포스트는 제 기준에서 재미있던 문제점들을 정리해보고 싶어서 시작되었습니다.
+> - ❌ _"이건 단점이라기보단 이런 이런 목적을 가지고 있는건데?"_
+>   - 일단 글을 작성할 때 최대한 이유나 예시를 함께 작성해 이해를 도우려고 하고 있습니다.
+>   - 문제 상황의 원인이 되는 부분을 중점적으로 다루는 포스트이기 때문에, 댓글을 통해 말씀해주시면 수정하겠습니다.
+> - ❌ _"그런 이상한 코드를 작성한 사람 잘못 아니야?"_
+>   - 저는 PHP가 욕먹는 이유의 대부분은 그 _"이상한 코드를 작성한 사람"_ 탓이라고 생각합니다.
+>   - 그런 사용자들이 저지른 실수 자체가 재미있게 다가왔기 때문에 이 포스트에 담아두었습니다.
 
 ---
 
