fix(posts): Correct class attribute in nested if statement examples

--- a/content/posts/cleancoding/nested-if-statement.mdx
+++ b/content/posts/cleancoding/nested-if-statement.mdx
@@ -20,7 +20,7 @@ tags: [cleancoding]
 
 중첩된 분기의 조건문을 작성하는 방식은 아래의 두가지로 크게 나뉩니다.
 
-<div class='flex flex-row gap-4'>
+<div className='flex flex-row gap-4'>
 
 ![sample-01](/assets/posts/cleancoding/nested-if-statement/sample_01.png)
 
@@ -38,7 +38,7 @@ tags: [cleancoding]
 
 위 예제에선 단순하게 `condition1`같은 형식으로 적어서 읽기가 편하지만, 만약 조건문이 아래와 같다면 굉장히 난해한 코드가 됩니다.
 
-<div class='flex flex-row gap-4'>
+<div className='flex flex-row gap-4'>
 
 ![sample-01](/assets/posts/cleancoding/nested-if-statement/sample_03.png)
 
