fix(posts): Update PHP code syntax in posts
- Corrected PHP code syntax in the introductory post to include proper tag formatting.
- Improved clarity and accuracy of code examples for better understanding.

--- a/content/posts/php/php-talkative-01-intro.mdx
+++ b/content/posts/php/php-talkative-01-intro.mdx
@@ -94,13 +94,13 @@ PHP의 문법은 기존 개발자들의 유입을 위해
 
 PHP는 프로그래밍 언어가 아닌 일종의 템플릿 언어로 시작되어 PHP 2.0에 들어서며 프로그래밍 언어로 재설계되었습니다.
 이러한 역사로 인해 일반적인 프로그래밍 언어와 달리 HTML 문서 내에 삽입되는 구조를 갖고 있는데요.
-PHP 파일은 아래와 같이 `<?php ... ?>` 태그 안에 PHP 코드가 삽입되고,
-이 외의 부분은 `echo` 키워드로 출력된 것과 동일하게 처리됩니다.
+PHP 파일은 아래와 같이 `<?php ... ?>{:php}` 태그 안에 PHP 코드가 삽입되고,
+이 외의 부분은 `echo{:php}` 키워드로 출력된 것과 동일하게 처리됩니다.
 
-설정을 통해 `<?`(SGML) 나 `<%`(ASP)로 시작하는 태그를 사용할 수도 있습니다.
-하지만 왠만한 경우엔 이식성 문제로 인해 `<?php`를 사용하는 것이 좋습니다.
+설정을 통해 `<?{:php}`(SGML) 나 `<%{:php}`(ASP)로 시작하는 태그를 사용할 수도 있습니다.
+하지만 왠만한 경우엔 이식성 문제로 인해 `<?php{:php}`를 사용하는 것이 좋습니다.
 
-```php title="PHP 코드"
+```php showLineNumbers
 <html>
     <body>
         <?php
@@ -110,7 +110,7 @@ PHP 파일은 아래와 같이 `<?php ... ?>` 태그 안에 PHP 코드가 삽입
 </html>
 ```
 
-```text title="출력 결과"
+```text title="출력 결과" showLineNumbers
 <html>
     <body>
         Hello World!
@@ -118,14 +118,14 @@ PHP 파일은 아래와 같이 `<?php ... ?>` 태그 안에 PHP 코드가 삽입
 </html>
 ```
 
-하지만, 스크립트 파일로서 사용될 때는 오히려 `?>` 태그를 사용하지 않는 것이 권장됩니다.
-이유는 `?>`로 닫힌 이후에 공백이나 줄바꿈이 있으면 의도치 않은 출력이 생길 수 있기 때문입니다.
+하지만, 스크립트 파일로서 사용될 때는 오히려 `?>{:php}` 태그를 사용하지 않는 것이 권장됩니다.
+이유는 `?>{:php}`로 닫힌 이후에 공백이나 줄바꿈이 있으면 의도치 않은 출력이 생길 수 있기 때문입니다.
 
-또한 PHP에는 `<?=`라는 단축 표현이 있습니다. 이 표현은 `<?php echo`를 대신하여 사용할 수 있습니다.
-또한 PHP의 모든 명령문은 C언어처럼 세미콜론(`;`)으로 끝나야 합니다.
-하지만 `?>`태그로 닫히면 세미콜론을 생략해도 됩니다.
+또한 PHP에는 `<?={:php}`라는 단축 표현이 있습니다. 이 표현은 `<?php echo{:php}`를 대신하여 사용할 수 있습니다.
+또한 PHP의 모든 명령문은 C언어처럼 세미콜론(`;{:php}`)으로 끝나야 합니다.
+하지만 `?>{:php}`태그로 닫히면 세미콜론을 생략해도 됩니다.
 
-```php title="축약된 PHP 코드"
+```php showLineNumbers
 <?= "Hello World!" ?>
 ```
 
