refactor(posts): Update post and category thumbnial images

--- a/content/posts/cleancoding/nested-if-statement.mdx
+++ b/content/posts/cleancoding/nested-if-statement.mdx
@@ -1,6 +1,7 @@
 ---
 title: '중첩된 조건문을 개선하는 방법'
 summary: '중첩된 조건문을 개선하는 방법에 대해 서술합니다.'
+thumbnail: '/assets/posts/cleancoding/nested-if-statement/thumbnail.png'
 date: 2023-10-24 16:24:00
 tags: [cleancoding]
 ---
