--- a/content/posts/blog/sitemap-issue.mdx
+++ b/content/posts/blog/sitemap-issue.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Google Search Console의 사이트맵을 가져올 수 없음 문제를 해결한 과정'
 summary: 'Google Search Console에서 사이트맵을 가져올 수 없음 문제를 해결한 과정을 기록합니다.'
+thumbnail: '/assets/posts/blog/sitemap-issue/thumbnail.png'
 date: 2024-04-02 12:42:00
 tags: [블로그]
 ---
