chore(post): Add thumbnail to prefix-sum post

--- a/content/posts/argorithm/prefix-sum.mdx
+++ b/content/posts/argorithm/prefix-sum.mdx
@@ -1,6 +1,7 @@
 ---
 title: '누적합이란? (Prefix sum)'
 summary: '배열이 주어졌을 때 특정 구간의 합을 반복해서 구해야하는 경우에 사용할 수 있는 알고리즘'
+thumbnail: '/assets/posts/argorithm/prefix-sum/thumbnail.png'
 date: 2023-02-04 01:40:00
 tags: [알고리즘, 알고리즘 이론]
 draft: false
