--- a/content/posts/argorithm/prefix-sum.mdx
+++ b/content/posts/argorithm/prefix-sum.mdx
@@ -1,41 +1,61 @@
 ---
-title: '누적합이란? (Prefix sum)'
-summary: '배열이 주어졌을 때 특정 구간의 합을 반복해서 구해야하는 경우에 사용할 수 있는 알고리즘'
+title: '누적합 알고리즘 (Prefix sum)'
+summary: '구간의 합 문제를 효율적으로 해결하기 위한 알고리즘'
 thumbnail: '/assets/posts/argorithm/prefix-sum/thumbnail.png'
 date: 2023-02-04 01:40:00
-tags: [알고리즘, 알고리즘 이론]
 draft: false
 ---
 
-**![time-limit-exceeded.png](/assets/posts/argorithm/prefix-sum/time-limit-exceeded.png) _! TIME LIMIT EXCEEDED !_**
+## _**![Time Limit Exceeded Meme](/assets/posts/argorithm/prefix-sum/time-limit-exceeded.png)**_
 
-알고리즘 문제를 풀다보면 단순히 반복 수행하면 시간 초과에 걸리게 되는 유형의 문제가 많이 나타납니다.
-요구하는 결과를 찾는 로직을 열심히 구현한 뒤에 _"오 드디어 구해진다!"_ 하고 제출했는데, **`시간 초과`**라고 뜨면 굉장히 머리가 아파지죠.
+<br />
 
-오늘은 부분합, 구간합 문제에 주로 사용되는 **`누적합`(Prefix sum)**에 대해 알아보도록 하겠습니다.
+## 개요
 
----
+알고리즘 문제를 해결하다 보면 종종 "시간 초과"라는 난관을 마주치게 됩니다.
+결과는 잘 도출하지만 실행 속도에 문제가 있다고 하면 굉장히 머리가 아파지죠.
+이러한 상황은 주로 단순 반복문으로 해결하려 할 때 자주 발생합니다.
 
-## ❔ 부분합, 구간합 ${(Partial\ Sum)}$
+오늘은 알고리즘 중 "구간의 합을 구하는 문제"의 효율성 테스트를 통과하기 위해 필요한 `누적합`($Prefix\ sum$) 알고리즘에 대해 정리해보도록 하겠습니다.
 
-먼저 간단하게 부분합과 구간합에 대해 알아봅시다.
-
-- 부분합 `0 ~ n`: 수열(배열)의 $0$번째부터 $n-1$번째까지의 합입니다.
-
-  - 수학식 : $S_n = a_1 + a_2 + a_3 + \dotsc + a_n$
-  - 프로그래밍식 : `S(n) = a[0] + a[1] + a[2] + ... + a[n-1]`
-
-- 구간합 `a ~ b` : 수열(배열)의 $a$번째부터 $b$번째까지의 합입니다.
-  - 수학식 : $S_{(a,b)} = a_a + a_{a+1} + \dotsc + \dot + a_{b-2} + a_{b-1} + a_b$
-  - 프로그래밍식 : `S(a, b) = a[a] + a[a+1] + ... + a[b-1] + a[b]`
+> #### 적용 대상
+>
+> - 구간합 / 부분합 $(Partial\ Sum)$
+> - 카운팅 정렬 $(Counting\ Sort)$
 
 ---
 
-## ❔ 누적합 $(Prefix\ Sum)$
+## 부분합과 구간합: 기초 개념 $(Partial\ Sum)$
 
-|    $array$    | $1$ | $2$ | $3$ | $4$  | $5$  | $6$  | $7$  | $8$  | $9$  | $...$ |
-| :-----------: | :-: | :-: | :-: | :--: | :--: | :--: | :--: | :--: | :--: | :---: |
-| $prefix\ sum$ | $1$ | $3$ | $6$ | $10$ | $15$ | $21$ | $28$ | $36$ | $45$ | $...$ |
+먼저 두 가지 핵심 개념에 대해 설명드리겠습니다.
+
+### 부분합 (0 ~ n)
+
+배열의 처음(0번째)부터 특정 위치(n-1번째)까지의 모든 원소를 더한 값입니다.
+
+- 수학적 표현 : $S_n = a_1 + a_2 + a_3 + \dotsc + a_n$
+- 프로그래밍적 표현 : `S(n) = a[0] + a[1] + a[2] + ... + a[n-1]`
+
+### 구간합 (a ~ b)
+
+배열의 특정 구간, 즉 a번째부터 b번째까지의 원소들을 모두 더한 값입니다.
+
+- 수학적 표현 : $S_{(a,b)} = a_a + a_{a+1} + \dotsc + a_{b-1} + a_b$
+- 프로그래밍적 표현 : `S(a, b) = a[a] + a[a+1] + ... + a[b-1] + a[b]`
+
+이 두 개념이 누적합 알고리즘의 기초가 됩니다. 여기서 의문이 드실 수 있습니다.
+"단순히 반복문으로 더하면 되지 않을까요?"
+
+맞습니다. 단순하게 접근하면 그렇습니다. 하지만 지금부터 설명드릴 누적합 알고리즘을 활용하시면,
+반복문으로 인한 시간 복잡도 문제를 효과적으로 해결하실 수 있습니다.
+
+---
+
+## 누적합 $Prefix Sum$
+
+|   array    | $1$ | $2$ | $3$ | $4$  | $5$  | $6$  | $7$  | $8$  | $9$  | $\dotsc$ |
+| :--------: | :-: | :-: | :-: | :--: | :--: | :--: | :--: | :--: | :--: | :------: |
+| prefix sum | $1$ | $3$ | $6$ | $10$ | $15$ | $21$ | $28$ | $36$ | $45$ | $\dotsc$ |
 
 _자연수가 나열된 1차원 수열 $(array)$이 있을 때  
 이 수열에 대한 누적합 $(prefix\ sum)$_
@@ -53,7 +73,7 @@ _자연수가 나열된 1차원 수열 $(array)$이 있을 때
 
 ---
 
-### 🧪 1차원 배열에서의 누적합
+### 1차원 배열에서의 누적합
 
 1차원 배열의 누적합을 만드는 방법은 아주 간단합니다.
 
@@ -92,7 +112,7 @@ function prefixSums(arr) {
 }
 ```
 
-#### 🥇 문제 풀이에 사용해보기
+#### 문제 풀이에 사용해보기
 
 백준의 대표적인 구간합 문제인 [`백준 11659 : 구간 합 구하기 4`](https://www.acmicpc.net/problem/11659)입니다.
 
@@ -130,18 +150,6 @@ function prefixSums(arr) {
 > 9
 > 1
 > ```
-
----
-
-## 🚀 누적합의 목적
-
-자 그럼 누적합은 어떤 경우에 사용하기 위해서 만들어진 걸까요?
-알고리즘 문제를 예시로 들면 아래 유형의 문제에 주로 사용됩니다.
-
-- 구간합 / 부분합 ${(Partial\ Sum)}$
-- 카운팅 정렬 $(Counting Sort)$
-
-백준의 대표적인 구간합 문제인 [`백준 11659 : 구간 합 구하기 4`](https://www.acmicpc.net/problem/11659)를 예시로 풀어보도록 하겠습니다.
 
 ---
 
