--- a/content/posts/blog/sitemap-issue.mdx
+++ b/content/posts/blog/sitemap-issue.mdx
@@ -3,50 +3,101 @@ title: 'Google Search Console의 사이트맵을 가져올 수 없음 문제를 
 summary: 'Google Search Console에서 사이트맵을 가져올 수 없음 문제를 해결한 과정을 기록합니다.'
 thumbnail: '/assets/posts/blog/sitemap-issue/thumbnail.png'
 date: 2024-04-02 12:42:00
-tags: [블로그]
 ---
 
-오늘은 오랜기간 저를 고통스럽게 했던 Google Search Console의 `사이트맵을 가져올 수 없음` 문제를 해결한 과정을 기록해보려고
-합니다.
+<br />
+
+## 개요
+
+꽤 오랜 기간동안 Google Search Console에서 `사이트맵을 가져올 수 없음` 문제가 발생해서 고생했던 경험이 있습니다.
+오늘은 이 문제를 해결하기 위해 제가 시도한 방법들을 정리해보려고 합니다.
 
 ![sitemap-issue-failed.png](/assets/posts/blog/sitemap-issue/failed.png) _모든 방법에 실패해버린 슬픈 사진_
 
-# 문제 상황
+## 문제 상황
 
 블로그를 만드는 모든 사람이 그러하듯 저도 인터넷에 검색할 때 짠!하고 제 블로그가 나오길 바라고 있었습니다.
 그래서 블로그가 준비되자마자 블로그 주소를 구글, 빙은 물론 네이버와 다음의 검색엔진에 전부 등록했죠.
 하지만 구글의 Google Search Console에서 `사이트맵을 가져올 수 없음`이라며 블로그가 등록되지 않았습니다.
 
-대부분의 블로그 유입은 구글 검색으로 들어올 것이라고 생각했기 때문에 더 스트레스 받았었죠.
-몇 개월의 시간 동안 저와 비슷한 문제를 겪는 사람들의 글을 보며 수많은 해결 방법을 시도해봤지만 결국 실패하고,
-글도 쓰지 못한 채 이 문제를 해결하기 위해 시간을 쏟아가 점점 블로그 운영에 대한 의욕을 잃어 한동안 블로그를 방치하게 되었습니다.
+---
 
-> 혹시나 누군가에겐 해결책이 될 수 있으니 제가 시도해본 방법들을 남겨놓겠습니다.
->
-> - `sitemap.xml/?test` 처럼 URL의 뒤에 `?`나 `/`를 붙여서 새로 시도해보세요.
-> - `sitemap.xml` 파일을 `sitemap`으로 변경해보세요.
-> - `sitemap.xml` 대신 `rss.xml`이나 `atom.xml` 파일을 만들어보세요.
-> - `robots.txt` 파일에 `Sitemap: https://{도메인}/sitemap.xml` 를 추가해보세요.
-> - 사이트 속성 말고 도메인 속성으로 등록해서 시도해보세요.
-> - 이미 도메인 속성이라면 `https://{도메인}/sitemap.xml` 처럼 전체 경로를 입력해보세요.
-> - `{당신의 깃헙 아이디}.github.io`가 아닌 이름으로 레포를 만들고 도메인을 설정해보세요.
-> - GihubPages가 아니라 Vercel 등 다른 플랫폼으로 이전해서 시도해보세요.
+## 문제 원인 1 : 사이트맵 파일의 문제
+
+- 사이트맵 파일이 존재하지 않거나 잘못된 경로에 있다.
+- 사이트맵 자체가 잘못된 형식으로 작성되었다.
+- 사이트맵 파일의 응답 헤더의 `Content-Type`이 잘못되었다.
+
+위 문제 사항은 가장 기본적인 문제들이어서 간단하게 확인해볼 수 있습니다.
+웹브라우저로 사이트맵 경로를 직접 접근해서 확인할 수도 있고,
+아니면 [xml-sitemaps.com/validate-xml-sitemap](https://www.xml-sitemaps.com/validate-xml-sitemap.html) 같은 사이트를 통해 확인할 수 있습니다.
+
+이 문제들은 사용하는 플랫폼에 따라 알맞은 방법으로 사이트맵을 제공해줌으로서 해결할 수 있습니다.
 
 ---
 
-### 해결 방법
+## 문제 원인 2: `robots.txt` 파일의 문제
 
-사실 제 문제가 해결된 방법은 너무 간단해서 오히려 이 방법을 시도하지 않은 제가 바보 같았습니다.
-어제 "블로그를 다시 하긴 해야하는데..." 하는 생각에 해결 방법을 고민하던 중,
-"이거 결국 \*.github.io에서 리디렉션 되는거잖아?"라는 생각이 들었습니다.
+- robots.txt 파일에 의해 구글 서치 콘솔의 접근이 차단되었다.
+- robots.txt 파일에서 사이트맵 URL이 누락되었다.
 
-그래서 그냥 해보긴 해야지 하는 심정으로 별 기대없이 Google Search Console에 들어가
-`https://presentkim.github.io` 사이트를 추가하고 사이트맵을 등록했더니 바로 등록이 되었습니다.
+이 문제는 `robots.txt` 파일을 통해 구글 서치 콘솔의 접근을 허용하고 사이트맵 정보를 추가해주면 해결할 수 있습니다.
+`robots.txt` 파일은 웹사이트의 루트 디렉토리에 위치해야 하며, 구글 서치 콘솔이 접근할 수 있도록 설정해야 합니다.
 
+```text title="robots.txt"
+User-agent: *
+Allow: /
+
+sitemap: https://domain.tld/sitemap.xml
+sitemap: https://domain.tld/atom.xml
+sitemap: https://domain.tld/rss.xml
+```
+
+> [GoogleSerchConsole/robots.txt](https://search.google.com/search-console/settings/robots-txt) 페이지에서 본인의 사이트 속성을 입력하고 현재 처리 상태를 확인할 수 있습니다.
+
+---
+
+## 문제 원인 3: 구글 서치 콘솔의 문제
+
+- 색인 요청이 대기열에 제대로 등록되지 않았다.
+- 색인 요청 후 오래 대기중이다.
+
+구글 서치 콘솔은 사이트맵 등록을 하면 먼저 `사이트맵을 가져올 수 없음`이라고 표시되고 실제로는 색인 요청이 대기열에 등록됩니다.
+이 문제를 개선해달라고 오랜 기간 구글에 요청되었지만 아직까진 해결되지 않았습니다.
+
+이 문제를 해결할 명확한 방법은 없지만, 간혹 새로운 요청을 보내면 먼저 처리되는 경우가 있다는 의견이 있습니다.
+따라서 시도해볼만한 방법들은 다음과 같습니다.
+
+- `sitemap.xml/?test`처럼 URL의 뒤에 쿼리 스트링을 붙인 경로를 추가로 등록합니다.
+- `sitemap.xml` 대신 `rss.xml`이나 `atom.xml` 파일을 만들어 추가로 등록합니다.
+- 사이트 속성 대신 도메인 속성으로 등록합니다.
+- Vercel, AWS 등 다른 플랫폼으로 이전해서 시도해보세요.
+
+> 구글 서치 콘솔은 대기열이 길어 보통 1~2주, 길면 1~2개월이 걸릴 수 있습니다.
+> 인내심을 갖고 기다리면서 사이트의 품질을 높이는 작업을 진행하는 것이 좋습니다.
+
+---
+
+## 문제 원인 4: 사이트 배포의 문제
+
+- 사이트가 CNAME 레코드로 배포되고 있다.
+- 사이트가 리디렉션되고 있다.
+
+제가 이 문제를 겪었던 이유도 바로 이 문제였습니다.
+Github Pages를 통해 블로그를 배포하고 있었기 때문에 `{name}.github.io` 도메인에서 리디렉션이 발생했습니다.
+
+기존 사이트 속성은 놔두고 그냥 추가로 `https://{name}.github.io` 속성을 추가하고 사이트맵을 등록합니다.
 ![sitemap-issue-success.png](/assets/posts/blog/sitemap-issue/success.png)
 _허무할 정도로 간단하게 사이트맵 등록 성공_
 
-# 결론
+---
 
-현재 실제로 사이트맵이 등록되고 페이지가 제대로 색인되는 중입니다.
-글이 매우 짧고 간단하지만 누군가에게 도움이 되길 바라는 마음으로 글을 납깁니다.
+### 후기
+
+사실 이 포스트를 작성하던 당시엔 몇 년 동안 제대로 이 문제가 해결되지 않아서 블로그를 거의 방치해두고 있었습니다.
+그러던 중 갑자기 *"이거 결국 github.io에서 리디렉션 되는거잖아?"*라는 생각이 들어
+마지막 방법을 시도해봤더니 바로 사이트맵 등록이 되었습니다...
+
+현재는 Vercel과 Next.js 로 블로그를 배포하고 있어서 해당 문제가 발생하지 않았었지만,
+다른 개발자들도 이 문제를 겪고 있을 것 같아 정리해보았습니다.
+이 포스트가 도움이 되었길 바라며, 혹시 다른 방법이 있다면 댓글로 남겨주시면 감사하겠습니다.
