docs(blog): Update post thumbnails to new

--- a/content/posts/php/php-talkative-01-intro.mdx
+++ b/content/posts/php/php-talkative-01-intro.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'PHP에 대한 잡담'
 summary: 'PHP 언어에 대한 TMI 덩어리'
+thumbnail: '/assets/posts/php/php-talkative-01-intro/thumbnail.png'
 date: 2024-04-03 10:12:00
 ---
 
